tests/negative/Internal/WrongType.juvix
module WrongType;
  inductive A {
    a : A;
  };

  inductive B {
    b : B;
  };

  f : A;
  f := b;
end;
